--- a/MVC/Views/Returns/PlaceReturn.cshtml
+++ b/MVC/Views/Returns/PlaceReturn.cshtml
@@ -1,17 +1,91 @@
-﻿
-@{
-    Layout = null;
-}
+﻿@model GreatOutdoors.Mvc.Models.OrderDetailViewModel
+
 
 <!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>PlaceReturn</title>
+    <title>Return your Order</title>
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
+    <script src="~/Scripts/umd/popper.js"></script>
+    <script src="~/Scripts/bootstrap.js"></script>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <div> 
+    <div class="container-fluid">
+        <h2 class="col-md-4">Return</h2>
+        <br/>
+        @using (Html.BeginForm("PlaceReturn","Returns",FormMethod.Post))
+        {
+            @Html.HiddenFor(temp=>temp.OrderDetailID)
+             <div class="row">                 
+                 <div class="col-md-6 mx-auto border-secondary">
+                     <h5 class="col-md-4 mx-auto">Product Details</h5>
+                     <br />
+                     <div class="form-group form-row">
+                         @Html.LabelFor(temp => temp.ProductName, "Product Name", new { @class = "col-form-label col-lg-3" })
+                         @Html.TextBoxFor(temp => temp.ProductName, new { @class = "form-control label col-lg-2", @readonly = "readonly" })
+                     </div>
+
+                     <div class="form-group form-row">
+                         @Html.LabelFor(temp => temp.Quantity, "Quantity", new { @class = "col-form-label col-lg-3" })
+                         @Html.TextBoxFor(temp => temp.Quantity, new { @class = "form-control label col-lg-2", @readonly = "readonly" })
+                     </div>
+
+                     <div class="form-group form-row">
+                         @Html.LabelFor(temp => temp.TotalPrice, "Total Price", new { @class = "col-form-label col-lg-3" })
+                         @Html.TextBoxFor(temp => temp.TotalPrice, new { @class = "form-control label col-lg-2", @readonly = "readonly" })
+                     </div>
+
+                     <br />
+                     <h5 class="col-md-4 mx-auto">Delivery Address</h5>
+                     <br />
+                     <div class="form-group form-row">
+                         @Html.LabelFor(temp => temp.City, "City", new { @class = "col-form-label col-lg-3" })
+                         @Html.TextBoxFor(temp => temp.City, new { @class = "form-control label col-lg-2", @readonly = "readonly" })
+                     </div>
+
+                     <div class="form-group form-row">
+                         @Html.LabelFor(temp => temp.State, "State", new { @class = "col-form-label col-lg-3" })
+                         @Html.TextBoxFor(temp => temp.State, new { @class = "form-control label col-lg-2", @readonly = "readonly" })
+                     </div>
+                     <div class="form-group form-row">
+                         @Html.LabelFor(temp => temp.PinCode, "Pin Code", new { @class = "col-form-label col-lg-3" })
+                         @Html.TextBoxFor(temp => temp.PinCode, new { @class = "form-control label col-lg-2", @readonly = "readonly" })
+                     </div>
+                     <div class="form-group form-row">
+                         @Html.LabelFor(temp => temp.MobileNo, "Mobile No.", new { @class = "col-form-label col-lg-3" })
+                         @Html.TextBoxFor(temp => temp.MobileNo, new { @class = "form-control label col-lg-2", @readonly = "readonly" })
+                     </div>
+                     <br />
+                     <h5 class="col-md-4 mx-auto">Select Reason</h5>
+
+
+                     <div class="form-group form-row">
+                         @Html.LabelFor(temp => temp.ReasonOfReturn, "Reason ", new { @class = "col-form-label col-lg-3" })
+                         @Html.DropDownListFor(temp => temp.ReasonOfReturn, new SelectList(Model.Reasons),
+                           new { @class = "form-control col-lg-9" })
+                         </div>
+                         @*@Html.RadioButtonFor(temp => temp.ReasonOfReturn, new { @class = "form-check-input", value = "Wrong", id = "Wrong",Checked=true})
+        <label for="Wrong">Wrong</label>
+        @Html.RadioButtonFor(temp => temp.ReasonOfReturn, new { @class = "form-check-input", value = "Incomplete", id = "Incomplete" })
+        <label for="Wrong">Incomplete</label>
+        <div class="col-md-6">
+            @Html.ValidationMessageFor(temp => temp.ReasonOfReturn)
+        </div>*@
+
+                   
+
+                     <div class="border-top text-right pt-2">
+                         <button class="btn btn-success" formaction="@Url.Action("PlaceReturn", "Returns")">Return</button>
+                     </div>
+
+                 </div>
+             </div>
+
+         }
     </div>
+
 </body>
 </html>
